--- a/src/main/res/values/preferences_lists.xml
+++ b/src/main/res/values/preferences_lists.xml
@@ -54,5 +54,21 @@
         <item>@string/tensorflow</item>
         <item>@string/caffe</item>
     </string-array>
+    <string-array name="face_cascade_file">
+        <item>@string/haarcascade_default</item>
+        <item>@string/haarcascade_alt</item>
+        <item>@string/haarcascade_alt2</item>
+        <item>@string/lbpcascade</item>
+    </string-array>
+    <string-array name="lefteye_cascade_file">
+        <item>@string/haarcascade_lefteye</item>
+        <item>@string/haarcascade_eye</item>
+        <item>@string/haarcascade_righteye</item>
+    </string-array>
+    <string-array name="righteye_cascade_file">
+        <item>@string/haarcascade_righteye</item>
+        <item>@string/haarcascade_eye</item>
+        <item>@string/haarcascade_lefteye</item>
+    </string-array>
     <string-array name="empty_array"/>
 </resources>
