Added additional settings (face detection preprocessing) Restructured settings (PreferencesHelper) Recompiled TensorFlow (deleted numClasses)

--- a/src/main/res/values/preferences_lists.xml
+++ b/src/main/res/values/preferences_lists.xml
@@ -15,6 +15,12 @@
  limitations under the License.
 -->
 <resources>
+    <string-array name="detection_standard_pre">
+        <item>@string/grayscale</item>
+    </string-array>
+    <string-array name="detection_standard_pre_default">
+        <item>@string/grayscale</item>
+    </string-array>
     <string-array name="standard_pre">
         <item>@string/grayscale</item>
         <item>@string/crop</item>
