Upgrade to OpenCV 3.2.0

--- a/src/main/res/xml/preferences.xml
+++ b/src/main/res/xml/preferences.xml
@@ -35,6 +35,18 @@
             android:defaultValue="50"
             android:numeric="integer"
             />
+        <ch.zhaw.facerecognition.Helpers.EditTextPreference
+            android:title="Maximum Camera View Width"
+            android:key="key_maximum_camera_view_width"
+            android:defaultValue="640"
+            android:numeric="integer"
+            />
+        <ch.zhaw.facerecognition.Helpers.EditTextPreference
+            android:title="Maximum Camera View Height"
+            android:key="key_maximum_camera_view_height"
+            android:defaultValue="480"
+            android:numeric="integer"
+            />
         <Preference
             android:title="Default Settings"
             android:key="key_default_button"
